scripts/nullaway/wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8.txt
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/cpabe/Cpabe.java:143: error: [NullAway] dereferenced expression beb.e is @Nullable
            plt = AESCoder.decrypt(beb.e.toBytes(), aesBuf);
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/cpabe/Cpabe.java:181: error: [NullAway] dereferenced expression beb.e is @Nullable
            plt = AESCoder.decrypt(beb.e.toBytes(), aesBuf);
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/gui/AddUser.java:149: error: [NullAway] unboxing of a @Nullable value
            int orgnId = orgnMap.get(orgnName);
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/gui/LoginPanel.java:163: error: [NullAway] unboxing of a @Nullable value
        int orgnId = orgnMap.get(orgnName);
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/gui/PatientHome.java:82: error: [NullAway] dereferenced expression ckp is @Nullable
                    byte[] decKey = cpabe.dec(KeyConfig.getInstance().getPatientReadPublicKeyPath(), KeyConfig.getInstance().getPatientReadSecretKeyPath(), ckp.getKeyBinary());
                                                                                                                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/gui/UserHomePanel.java:95: error: [NullAway] dereferenced expression ckp is @Nullable
                    byte[] decKey = cpabe.dec(KeyConfig.getInstance().getPatientReadPublicKeyPath(), KeyConfig.getInstance().getUserReadSecretKeyPath(), ckp.getKeyBinary());
                                                                                                                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/gui/UserHomePanel.java:206: error: [NullAway] unboxing of a @Nullable value
        int pid = patientMap.get(patient);
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/gui/NewRecordPanel.java:97: error: [NullAway] unboxing of a @Nullable value
        int pid = patientMap.get(patientName);
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:226: error: [NullAway] dereferenced expression cph.p is @Nullable
        if (!cph.p.satisfiable) {
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:293: error: [NullAway] dereferenced expression p.children is @Nullable
            decNodeFlatten(r, expnew, p.children[p.satl.get(i) - 1], prv, pub);
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:350: error: [NullAway] dereferenced expression p is @Nullable
        p.satisfiable = false;
         ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:381: error: [NullAway] dereferenced expression p is @Nullable
        p.q = randPoly(p.k - 1, e);
         ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:381: error: [NullAway] dereferenced expression p is @Nullable
        p.q = randPoly(p.k - 1, e);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:436: error: [NullAway] dereferenced expression s is @Nullable
        toks = s.split(" ");
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:496: error: [NullAway] dereferenced expression s is @Nullable
        byte[] digest = md.digest(s.getBytes());
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java:512: error: [NullAway] dereferenced expression policy.children is @Nullable
            k = policy.children[o1.intValue()].min_leaves;
                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/SerializeUtils.java:17: error: [NullAway] dereferenced expression e is @Nullable
        byte[] arr_e = e.toBytes();
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/SerializeUtils.java:38: error: [NullAway] dereferenced expression s is @Nullable
        byte[] b = s.getBytes();
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/SerializeUtils.java:215: error: [NullAway] dereferenced expression p is @Nullable
        serializeUint32(arrlist, p.k);
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/CryptoUtil.java:13: error: [NullAway] dereferenced expression filename is @Nullable
        if (filename.equalsIgnoreCase("N/A")) {
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/DatabaseClient.java:84: error: [NullAway] dereferenced expression readMasterKeyChecksum is @Nullable
                if (!readMasterKeyChecksum.equals(dbReadMasterKeyChecksum)) {
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/DatabaseClient.java:88: error: [NullAway] dereferenced expression writeMasterKeyChecksum is @Nullable
                if (!writeMasterKeyChecksum.equals(dbWriteMasterKeyChecksum)) {
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/DatabaseClient.java:140: error: [NullAway] dereferenced expression readSecretKeyChecksum is @Nullable
                if (!readSecretKeyChecksum.equals(dbReadSecretKeyChecksum)) {
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/DatabaseClient.java:143: error: [NullAway] dereferenced expression writeSecretKeyChecksum is @Nullable
                if (!writeSecretKeyChecksum.equals(dbWriteSecretKeyChecksum)) {
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/DatabaseClient.java:403: error: [NullAway] dereferenced expression userAttribute is @Nullable
        int countAttr = userAttribute.split(" ").length;
                                     ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/bswabe/Bswabe.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
25 errors
